Trying to fix the layout shift.

--- a/src/styles/general/general.pcss
+++ b/src/styles/general/general.pcss
@@ -139,7 +139,7 @@ h6 {
 }
 ._content-block {
   padding-block: 30px;
-  height: calc(100vh - var(--scroll-padding-top));
+  height: calc(100svh - var(--scroll-padding-top));
 }
 ._centred-title {
   text-align: center;
