--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -40,7 +40,7 @@
   &_end-block {
     grid-template-columns: 1fr;
     gap: 20px;
-    height: 50vh;
+    height: 50svh;
 
     @media (width <= 600px) {
       grid-template-columns: 1fr;
